--- a/index.html
+++ b/index.html
@@ -1,20 +1,34 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <meta charset="UTF-8">
-  <title>Antivírus JS</title>
-  <style>
-    body { font-family: Arial; background:#111; color:#0f0; text-align:center; }
-    button { margin:10px; padding:15px; font-size:16px; }
-  </style>
-</head>
-<body>
-  <h1>🛡 Antivírus JS</h1>
-  <button onclick="scan()">Scan Completo</button>
-  <button onclick="monitor()">Monitorar</button>
-  <button onclick="listQ()">Quarentena</button>
-  <pre id="log"></pre>
-
-  <script src="renderer.js"></script>
-</body>
-</html>
+<style>
+body {
+  margin:0;
+  font-family: Segoe UI, Arial;
+  background:#0f172a;
+  color:white;
+}
+header {
+  background:#0b5cff;
+  padding:15px;
+  font-size:20px;
+}
+button {
+  background:#1e40af;
+  border:none;
+  padding:15px;
+  margin:10px;
+  color:white;
+  font-size:16px;
+  cursor:pointer;
+  border-radius:6px;
+}
+button:hover {
+  background:#2563eb;
+}
+#log {
+  background:black;
+  margin:10px;
+  padding:10px;
+  height:200px;
+  overflow:auto;
+  font-family: Consolas;
+}
+</style>
